--- a/mis/2mis/flp/projekt1/TODO
+++ b/mis/2mis/flp/projekt1/TODO
@@ -1,6 +1,7 @@
 TODO
 ----
 - pridat testy a testovaci skript, popsat v README
+  - pridat 'chmod +x' na skript do makefilu?
 - otestovat na merlinovi
 - Pouzijte nastroj hlint, ktery vas upozorni na nedostatky v kodu a na jeho casti, ktere by sly napsat lepe.
   - Neopakujte stejne casti kodu, dodrzujte princip DRY.
